--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
-                        <p class="p_card img_card_2">
+                    <div class="card img_card_2">
+                        <p class="p_card">
                             надежная подача
                         </p>
                         <div class="circle_possibilities">
